# moon_libration_simulator

./: .gitignore  README.md  crossing_finder.py  export_web_data.py  laser_simulator.py  make_cycle_figures.py  make_month_tiles.py  pyproject.toml
archive/: moon.py  moon2.py  moon3.py  moon4_gpt4_works.py  moon5.py  moon6_fullmoonsonly.py  moon6_intersection.py  moon7.py  moon8_mollweide_projection.py
docs/: CNAME  app.js  fold.js  index.html  style.css
docs/data/: crossings.json  crossings_2026_2126.json  meta.json  meta_2026_2126.json
output/: earth_crossings_1926_2026.csv  earth_crossings_2026_2126.csv
